# SpeechRecognition

./: .gitignore  pyproject.toml
src/: env.py  main.py  runner.py  utils.py
src/backends/: __init__.py  api.py  vosk.py
src/converters/: __init__.py  api.py  ffmpeg_.py
src/services/: __init__.py  api.py
src/services/telegram/: main.py
